--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.55.0",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
