--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.55.0",
     "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dropzone": "^6.0.0-beta.2",
@@ -41,6 +42,8 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@babel/types": "^7.25.6",
+    "@types/babel__core": "^7.20.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
