--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sindbad_store": "file:",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.3",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
