--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
+    "next-nprogress-bar": "^2.3.14",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
