--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,13 @@
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "no-unused-vars": "warn", // تحذير عند وجود متغيرات غير مستخدمة
-    "import/named": "error", // خطأ عند وجود استيرادات غير صحيحة
-    "import/default": "error", // خطأ عند وجود استيرادات غير صحيحة
-    "import/namespace": "error", // خطأ عند وجود استيرادات غير صحيحة
-    "import/no-unresolved": "error" // خطأ عند وجود استيرادات غير موجودة
+    "no-unused-vars": "error", // اجعلها خطأ بدلاً من تحذير
+    "import/named": "error",
+    "import/default": "error",
+    "import/namespace": "error",
+    "import/no-unresolved": "error",
+    "react-hooks/rules-of-hooks": "error", // تأكد من استخدام Hooks بشكل صحيح
+    "react-hooks/exhaustive-deps": "warn" // تحذير عند عدم وجود التبعيات
   },
-  "plugins": ["import"]
+  "plugins": ["import", "react-hooks"]
 }
