--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
     "react-to-print": "^3.0.1",
     "sindbad_store": "file:",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
