--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.14",
+    "nuqs": "^2.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
