--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.55.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
