test error of login

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_BASE_URL = https://icode-sendbad-store.runasp.net/api/
 NEXTAUTH_SECRET=c5f12add469868dd91a9b999758f96e7
-NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_URL=https://sindbad-store.vercel.app/
