--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-NEXT_PUBLIC_BASE_URL = https://51.178.112.50:82/api/
+NEXT_PUBLIC_BASE_URL =https://sindibad-shop.com:82/api/
 NEXTAUTH_SECRET=c5f12add469868dd91a9b999758f96e7
 NEXTAUTH_URL=http://localhost:3000/
-NODE_TLS_REJECT_UNAUTHORIZED=0
