--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_BASE_URL =https://sindibad-shop.com:82/api/
+NEXT_PUBLIC_BASE_URL =https://www.sindibad-back.com:82/api/
 NEXTAUTH_SECRET=c5f12add469868dd91a9b999758f96e7
 NEXTAUTH_URL=http://localhost:3000/
+# NODE_TLS_REJECT_UNAUTHORIZED=0
