--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-modern-drawer": "^1.4.0",
     "react-to-print": "^3.0.1",
+    "react-toastify": "^11.0.5",
     "sindbad_store": "file:",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
