--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.2.1",
@@ -46,7 +48,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-modern-drawer": "^1.4.0",
     "react-to-print": "^3.0.1",
-    "react-toastify": "^11.0.5", 
+    "react-toastify": "^11.0.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
