--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.55.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
+    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
@@ -41,6 +42,7 @@
     "next-nprogress-bar": "^2.3.14",
     "nuqs": "^2.2.3",
     "react": "^18",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
