--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.55.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
     "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +36,7 @@
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
@@ -49,8 +51,11 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-modern-drawer": "^1.4.0",
+    "react-player": "^3.1.0",
+    "react-slick": "^0.30.3",
     "react-to-print": "^3.0.1",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
