--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-modern-drawer": "^1.4.0",
+    "react-multi-input-rangeslider": "^1.0.12",
     "react-player": "^3.1.0",
     "react-slick": "^0.30.3",
     "react-to-print": "^3.0.1",
