--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/bundle-analyzer": "^15.4.6",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -25,10 +26,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.55.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
-    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
@@ -44,7 +42,6 @@
     "next-nprogress-bar": "^2.3.14",
     "nuqs": "^2.2.3",
     "react": "^18",
-    "react-blurhash": "^0.3.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
@@ -52,7 +49,6 @@
     "react-intersection-observer": "^9.13.1",
     "react-modern-drawer": "^1.4.0",
     "react-multi-input-rangeslider": "^1.0.12",
-    "react-player": "^3.1.0",
     "react-slick": "^0.30.3",
     "react-to-print": "^3.0.1",
     "react-toastify": "^11.0.5",
@@ -67,9 +63,11 @@
   "devDependencies": {
     "@babel/types": "^7.25.6",
     "@types/babel__core": "^7.20.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.8",
     "eslint-plugin-import": "^2.31.0",
